infra/k8s/nats-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats-streaming:0.23.2 # imagem nativa do NATS streaming server (docs em docs.nats.io)
          args:
            [
              '-p',   # Port published for clients' connection
              '4222',
              '-m',   # Port published for monitoring the streaming server (eg. via http://localhost:8222/streaming)
              '8222',
              '-hbi', # How often the streaming server is going to do a heart beat (hb) request to each of its clients
              '5s',
              '-hbt', # How log each client has to respond to a hb request
              '5s',
              '-hbf', # Number of times that each client can fail before the streaming server assumes that the client connection is dead and gone
              '2',
              '-SD',
              '-cid',
              'healthcheck',
            ]
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
---
apiVersion: v1
kind: Service
metadata:
  name: nats-srv
spec:
  selector:
    app: nats
  ports:
    - name: client
      protocol: TCP
      port: 4222
      targetPort: 4222
    - name: monitoring
      protocol: TCP
      port: 8222
      targetPort: 8222
