infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: nats-healthcheck
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: nats-srv
                port:
                  number: 4222                
          - path: /streaming/?(.*)
            pathType: Prefix
            backend:
              service:
                name: nats-srv
                port:
                  number: 8222
